--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
       name="Description"
       content="This website created by OP-Developer PVT LTD "
     />
-    <link href="https://unpkg.com/tailwindcss@1.3.4/dist/tailwind.min.css" rel="stylesheet"/>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <!-- <link rel="stylesheet" href="iziToast.min.css"> -->
+    <link
+      href="https://unpkg.com/tailwindcss@1.3.4/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"
       integrity="sha256-xKeoJ50pzbUGkpQxDYHD7o7hxe0LaOGeguUidbq6vis="
